# sparkler

./: .gitignore  .stestr.conf  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.stestr/: 0  1  times.dbm.bak  times.dbm.dir
sparkler/: cmd.py
sparkler/tests/: test_cmd.py
