[metadata]
name = sparkler
summary = GitHub stats sparkline CLI
description-file =
    README.rst
author = Sean McGinnis
author-email = sean.mcginnis@gmail.com
home-page = http://www.ivehearditbothways.com
license = Apache License (2.0)
keywords = sparklines spark lines
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    sparkler

[entry_points]
console_scripts =
    sparkler = sparkler.cmd:main

[wheel]
universal = 1
